# HRTC

./: CMakeLists.txt  LICENSE  README.md  compilation_options.cmake
3rd/: 3rd.cmake
3rd/libuv/: CMakeLists.txt
3rd/libyuv/: CMakeLists.txt
3rd/msgpack-c/: CMakeLists.txt
3rd/x264/: CMakeLists.txt  x264.h
demo/: BaseWindow.h  CMakeLists.txt  main.cpp  model.h
demo/Whiteboard/: board.cpp  board.h  board_define.h
src/: CMakeLists.txt  HrtcEngine.cpp
src/Base/: CMakeLists.txt  Collections.h  CountDownLatch.h  ErrorCode.h  Event.h  GuardHelper.h  HrtcExport.h  HrtcRefPtr.h  RefCounter.h  Sigslot.cpp  Sigslot.h  SpinLock.h  TimeUtils.cpp  TimeUtils.h  base.h
src/Base/Log/: Channel.h  Log.cpp  Log.h
src/Base/Thread/: DispatchQueue.cpp  DispatchQueue.h
src/Base/VideoBase/: ImgUtility.h  VideoCaptureConfig.h  VideoCaptureDefines.cpp  VideoCaptureDefines.h  VideoRotation.h
src/Headers/: HrtcEngine.h  MediaInfo.h
src/Node/: BaseNode.cpp  BaseNode.h
src/Pin/: BasePin.cpp  BasePin.h  IPin.h  InputPin.cpp  InputPin.h  OutputPin.cpp  OutputPin.h
src/Transport/: CMakeLists.txt  CommonType.cpp  CommonType.h  DataStream.cpp  DataStream.h  IpUtils.h  Room.h  TcpClient.cpp  TcpClient.h  TcpConnection.h  TcpServer.cpp  TcpServer.h  demo.cpp  test.cpp
src/VideoCapture/: CMakeLists.txt  DeviceInfoImpl.cpp  DeviceInfoImpl.h  RawVideoSinkInterface.h  VideoCapture.h  VideoCaptureFactory.cpp  VideoCaptureFactory.h  VideoCaptureImpl.cpp  VideoCaptureImpl.h  VideoCaptureOptions.cpp  VideoCaptureOptions.h
src/VideoCapture/windows/: video_capture_factory_windows.cc
src/VideoCapture/windows/ds/: device_info_ds.cc  device_info_ds.h  help_functions_ds.cc  help_functions_ds.h  sink_filter_ds.cc  sink_filter_ds.h  video_capture_ds.cc  video_capture_ds.h
src/VideoCapture/windows/mf/: device_info_mf.cc  device_info_mf.h  help_types_general.h  source_reader_callback_mf.cc  source_reader_callback_mf.h  source_reader_control_mf.h  video_capture_mf.cc  video_capture_mf.h
src/VideoCodec/: CMakeLists.txt  VideoEncoder.cpp  VideoEncoder.h
src/VideoCodec/x264/: x264Encoder.cpp  x264Encoder.h
src/VideoNode/: VideoEncodeNode.cpp  VideoEncodeNode.h  VideoSinkNode.cpp  VideoSinkNode.h  VideoSourceNode.cpp  VideoSourceNode.h
src/VideoRender/: CMakeLists.txt  VideoRender.cpp  VideoRender.h
src/VideoRender/windows/: video_render_factory_windows.cc
src/VideoRender/windows/d3d9/: d3d9_render.cc  d3d9_render.h
