set(target_name "hrtc_engine")

add_subdirectory(Base)
add_subdirectory(VideoCapture)
add_subdirectory(VideoRender)


file(GLOB RTC_NODE_SRC  Node/*.h Node/*.cpp)
file(GLOB RTC_PIN_SRC  Pin/*.h Pin/*.cpp)
file(GLOB RTC_API_SRC Headers/*.h *.cpp *.h)
file(GLOB RTC_VIDEO_SRC VideoNode/*.h VideoNode/*.cpp )
SOURCE_GROUP("Node" FILES ${RTC_NODE_SRC})
SOURCE_GROUP("Pin" FILES ${RTC_PIN_SRC})
SOURCE_GROUP("Video" FILES ${RTC_VIDEO_SRC})
SOURCE_GROUP("Engine"FILES ${RTC_API_SRC} )
add_library(${target_name} SHARED ${RTC_NODE_SRC} ${RTC_PIN_SRC} ${RTC_API_SRC} ${RTC_VIDEO_SRC})
target_link_libraries(${target_name} hrtc_base hrtc_video_capture hrtc_video_render)
# if(HRTC_ANDROID)
#     target_link_libraries(${target_name} jni_utils)
# endif()                    
# set_target_properties(${target_name} PROPERTIES FOLDER "engine")